# CO2-Capture_QEK

./: .gitignore  CO2 Capture.docx  Copie de BP_hackathon_energy_benchmark_ratios.xlsx  DataSetStats-complexity.ipynb  MOF_animation.ipynb  PitchVideo.py  Projection.ipynb  README.md  VideoManim.py  VideoManim_full.py  playground.ipynb  pyproject.toml  str_m3_o13_o16_pcu_sym.94.cif  test_readData.ipynb
MOF-CO2/: Co2_setup.py
dataset/CoREMOF2019-mofdb-version-dc8a0295db/: 1499489-acs.cgd.6b01265_1499490_clean.cif  1499489-acs.cgd.6b01265_1499490_clean.json  ABAVIJ_clean.json  ABAYIO_clean.json  ABAYOU_clean.json  ABEFUL_clean.json  ABESUX_clean.json  ABETAE_clean.json  ABETIN_clean.json  ABEXEM_clean.json  ABEXEN_clean.json  ABEXIQ_clean.json  ACALIB_clean.cif  (+18247 more)
dataset_mol2/: AHOKIR01.mol2  BOHGOU.mol2  CICYIX.mol2  EBEMEF.mol2  FIGXAU.mol2  FIGXEY.mol2  FIVNAZ.mol2  FUTJOV.mol2  GISZUD.mol2  HAKWUM.mol2  KAHPUE.mol2  KECRAL10.mol2  LUFQUZ01.mol2  MOCJEU.mol2  NINHOH.mol2  OLOKEF.mol2  PIYZAZ.mol2  REGJIW.mol2  RENWEM01.mol2  RONZID.mol2  RURPAW.mol2  RURPEA.mol2  SOBZOY.mol2  TILVUF.mol2  TILWAM.mol2  UHISOU.mol2  XOMCIL.mol2
dataset_trimmed/: AHOKIR01_txt  BOHGOU_txt  CICYIX_txt  EBEMEF_txt  FIGXAU_txt  FIGXEY_txt  FIVNAZ_txt  GISZUD_txt  HAKWUM_txt  KAHPUE_txt  KECRAL10_txt  LUFQUZ01_txt  MOCJEU_txt  NINHOH_txt  OLOKEF_txt  PIYZAZ_txt  RENWEM01_txt  RONZID_txt  RURPAW_txt  RURPEA_txt  SOBZOY_txt  TILVUF_txt  TILWAM_txt  UHISOU_txt
old/: 3Dmol.ipynb  MOF_analysis_cloud.ipynb  master.ipynb  playground copy.ipynb  playground.ipynb  test_mocjeu.xyz  test_readData.ipynb
(+962 files in other folders)
