[tool.poetry]
name = "co2-capture-gnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pulser = "^0.15.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
