[tool.poetry]
name = "co2-capture-gnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pulser = "^0.15.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
mofdb-client = "^0.10.0"
manim = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
